<resources>
    <string name="app_name">On Track</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Tasks</string>
    <string name="title_geofence">Geofence</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="set_geofence">Set Geofence</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- For login and registration -->
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="account_type_hint">Account Type</string>
    <string name="guest_login_button">Guest Login</string>
    <string name="login_button">Login</string>
    <string name="register_button">Create Account</string>
    <string name="sign_out_button">Sign Out</string>
    <!-- For home fragment -->
    <string name="sign_out">Sign Out</string>
    <string name="name">Name:</string>
    <string name="time_used">Time used:</string>
    <!-- For tasks fragment -->
    <string name="task_status">Status</string>
    <string name="add_task_button">Add Task</string>
    <!-- For task objects -->
    <string name="name_key">name_key</string>
    <string name="app_name_key">app_name_key</string>
    <string name="increment_key">increment_key</string>
    <string name="progress_key">progress_key</string>
    <string name="goal_units_key">goal_units_key</string>
    <string name="goal_key">goal_key</string>
    <string name="start_date_key">start_date_key</string>
    <string name="duration_units_key">duration_units_key</string>
    <string name="duration_key">duration_key</string>
    <!-- For adding tasks -->
    <string name="task_name_hint">Task Name</string>
    <string name="app_name_hint">App Name</string>
    <string name="progress_goal_goal_units_helper">app for</string>
    <string name="duration_duration_units_helper">For the next</string>
    <string name="cancel_add_task_button">Discard</string>
    <string name="confirm_add_task_button">Add</string>
</resources>