<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.tasks.AddTaskActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linear_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:passwordToggleEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_name_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:hint="@string/task_name_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:importantForAutofill="no"
                    android:inputType="textCapWords"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:background="@android:color/transparent"
                app:boxBackgroundColor="@android:color/transparent"
                app:passwordToggleEnabled="false"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu">

                <!-- TODO: Fix user entering their own information outside of auto complete options -->

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/app_name_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:gravity="center"
                    android:hint="@string/app_name_hint"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="text"
                    android:singleLine="true"
                    android:focusable="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <NumberPicker
                    android:id="@+id/increment_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/DefaultNumberPickerTheme"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/progress_goal_goal_units_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/progress_goal_goal_units_helper"/>

                <NumberPicker
                    android:id="@+id/goal_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/DefaultNumberPickerTheme"/>

                <NumberPicker
                    android:id="@+id/goal_units_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/DefaultNumberPickerTheme"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/duration_duration_units_helper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration_duration_units_helper"/>

                <NumberPicker
                    android:id="@+id/duration_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/DefaultNumberPickerTheme"/>

                <NumberPicker
                    android:id="@+id/duration_units_input"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:theme="@style/DefaultNumberPickerTheme"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:weightSum="2"
        android:baselineAligned="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cancel_add_task_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="end"
                android:padding="10dp"
                android:contentDescription="@string/cancel_add_task_button"
                app:srcCompat="@drawable/ic_baseline_playlist_remove_24"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/confirm_add_task_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:layout_gravity="start"
                android:padding="10dp"
                android:contentDescription="@string/confirm_add_task_button"
                app:srcCompat="@drawable/ic_baseline_playlist_add_check_24"/>

        </FrameLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>